# kursach

./: CMakeLists.txt  JSONfile.cpp  JSONfile.h  Json_class.cpp  Json_class.h  README.md  main.cpp
